# obsydian-examples

./: BUILD  MODULE.bazel  README.md  bazel-bin  bazel-obsydian-examples  bazel-out  bazel-testlogs
examples/: BUILD
examples/hello_world/: BUILD  Info.plist  main.cpp
examples/layout_showcase/: BUILD  main.cpp
examples/router_basic/: BUILD  Info.plist  main.cpp
examples/router_basic/app/: _layout.cpp  about.cpp  contact.cpp  index.cpp
examples/router_complete/: BUILD  main.cpp
examples/router_complete/app/: _layout.cpp  index.cpp
examples/router_complete/app/admin/: index.cpp
examples/router_complete/app/blog/: [slug].cpp  _layout.cpp  index.cpp
examples/router_dynamic/: BUILD  main.cpp
examples/router_dynamic/app/: _layout.cpp  index.cpp
examples/router_dynamic/app/products/: [id].cpp  index.cpp
examples/router_dynamic/app/users/: [userId].cpp  index.cpp
examples/router_nested/: BUILD  Info.plist  main.cpp
examples/router_nested/app/: _layout.cpp  index.cpp
examples/router_nested/app/dashboard/: _layout.cpp  index.cpp  settings.cpp
examples/router_patterns/: BUILD  main.cpp
examples/router_patterns/app/: _layout.cpp  index.cpp  page1.cpp  page2.cpp  page3.cpp
examples/sidebar_showcase/: BUILD  main.cpp
examples/sidebar_with_router/: BUILD  Info.plist  main.cpp
examples/sidebar_with_router/app/: index.cpp
examples/sidebar_with_router/app/about/: index.cpp
examples/sidebar_with_router/app/settings/: index.cpp
examples/splitview_showcase/: BUILD  Info.plist  main.cpp
examples/system_showcase/: BUILD  Info.plist  main.cpp
examples/textview_showcase/: BUILD  Info.plist  main.cpp
examples/ui_showcase/: BUILD  Info.plist  main.cpp
examples/zstack_showcase/: BUILD  Info.plist  main.cpp
